Bug 1713271 - Capture the initial maps during static initialisation r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D116339